prevent overlapping of header and footer

--- a/src/styles/Footer.sass
+++ b/src/styles/Footer.sass
@@ -6,6 +6,7 @@
   width: 100%;
   text-align: center;
   min-width: 320px;
+  z-index: 1000;
 }
 
 .footer {
