--- a/src/styles/Header.sass
+++ b/src/styles/Header.sass
@@ -4,7 +4,7 @@
   top: 0;
   width: 100%;
   text-align: center;
-  z-index: 1;
+  z-index: 1000;
   min-width: 320px;
 }
 
